pass data to a view

--- a/code/templates/default/index.html.twig
+++ b/code/templates/default/index.html.twig
@@ -16,5 +16,10 @@
         <li>Your controller at <code><a href="{{ '/root/repository/code/src/Controller/DefaultController.php'|file_link(0) }}">src/Controller/DefaultController.php</a></code></li>
         <li>Your template at <code><a href="{{ '/root/repository/code/templates/default/index.html.twig'|file_link(0) }}">templates/default/index.html.twig</a></code></li>
     </ul>
+    <ul>
+        {% for user in users %}
+            <li>{{user}}</li>
+        {% endfor %}
+    </ul>
 </div>
 {% endblock %}
