Create a entity, save, recovery, send to a view and show it

--- a/code/templates/default/index.html.twig
+++ b/code/templates/default/index.html.twig
@@ -18,7 +18,7 @@
     </ul>
     <ul>
         {% for user in users %}
-            <li>{{user}}</li>
+            <li>{{user.name}}</li>
         {% endfor %}
     </ul>
 </div>
