--- a/code/templates/default/index.html.twig
+++ b/code/templates/default/index.html.twig
@@ -18,7 +18,7 @@
     </ul>
     <ul>
         {% for user in users %}
-            <li>{{user.name}}</li>
+            <li>{{user.name}} you won {{random_gift[loop.index0]}}</li>
         {% endfor %}
     </ul>
 </div>
